fixed z-index on header in desktop view

--- a/src/components/styles/navbar.module.css
+++ b/src/components/styles/navbar.module.css
@@ -78,6 +78,10 @@
 
 
 @media only screen and (min-width: 800px) {
+  .navBackground {
+    z-index: 5;
+  }
+
   .mobile {
     display: none;
   }
